--- a/Neomaster.R7Client.Infra/Neomaster.R7Client.Infra.csproj
+++ b/Neomaster.R7Client.Infra/Neomaster.R7Client.Infra.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>Neomaster.R7Client</PackageId>
-    <Version>1.0.4</Version>
+    <Version>1.0.5</Version>
     <Authors>Neomaster</Authors>
     <Company>Neomaster</Company>
     <Description>Клиент для взаимодействия с R7 API</Description>
@@ -22,6 +22,12 @@
   
   <ItemGroup>
     <ProjectReference Include="..\Neomaster.R7Client.App\Neomaster.R7Client.App.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Update="README.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
