--- a/Neomaster.R7Client.Infra/Neomaster.R7Client.Infra.csproj
+++ b/Neomaster.R7Client.Infra/Neomaster.R7Client.Infra.csproj
@@ -19,15 +19,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <ProjectReference Include="..\Neomaster.R7Client.App\Neomaster.R7Client.App.csproj" />
   </ItemGroup>
-  
+
   <ItemGroup>
-    <None Update="README.md">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <None Include="README.md" Pack="true" PackagePath="" />
   </ItemGroup>
 
 </Project>
