--- a/Neomaster.R7Client.Infra/Neomaster.R7Client.Infra.csproj
+++ b/Neomaster.R7Client.Infra/Neomaster.R7Client.Infra.csproj
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     <PackageId>Neomaster.R7Client</PackageId>
     <PackageIcon>neomaster64.png</PackageIcon>
-    <Version>1.0.8</Version>
+    <Version>1.0.10</Version>
     <Authors>Neomaster</Authors>
     <Company>Neomaster</Company>
     <Copyright>Copyright © 2024 Neomaster</Copyright>
@@ -19,7 +19,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="README.md" Pack="true" PackagePath="" />
+    <None Include="../../README.md" Pack="true" PackagePath="" />
     <None Include="neomaster64.png" Pack="true" PackagePath="" />
   </ItemGroup>
 
